--- a/.CONTRIBUTING.md
+++ b/.CONTRIBUTING.md
@@ -1,1 +1,129 @@
- 
+# Contributing to Junction Sim
+
+## Development Environment Setup
+1. Required tools:
+   - JDK 17+
+   - Gradle 8.0+
+   - Processing 4.0+
+   - Git
+
+2. Initial setup:
+```bash
+git clone https://github.com/YourOrg/Junction-Sim.git
+cd Junction-Sim
+gradle build
+```
+
+## Project Structure
+```
+junction-sim/
+├── src/
+│   ├── main/java/
+│   │   ├── core/           # Core simulation logic
+│   │   ├── cli/            # Command line interface
+│   │   ├── metrics/        # Traffic analysis
+│   │   └── gui/            # Processing visualization
+│   └── test/java/          # Test files
+├── processing/             # Processing-specific code
+├── docs/                   # Documentation
+└── gradle/                 # Gradle configuration
+```
+
+## Development Workflow
+
+### Git Workflow (using git cmd)
+1. Create feature branch:
+```
+git checkout -b feature/your-feature-name
+```
+
+2. Make changes and commit:
+```
+git add .
+git commit -m "feat(core): implement vehicle routing logic"
+```
+
+3. Push and create PR:
+```
+git push origin feature/your-feature-name
+```
+
+### Commit Message Format
+- feat(scope): New feature
+- fix(scope): Bug fix
+- test(scope): Test addition/modification
+- docs(scope): Documentation only
+- refactor(scope): Code improvement
+
+Examples:
+- `feat(cli): add traffic density parameter`
+- `fix(metrics): correct throughput calculation`
+- `test(core): add junction capacity tests`
+
+### Testing Requirements
+1. Unit tests for all new features
+2. Integration tests for component interactions
+3. Run tests before PR:
+```
+gradle test
+```
+
+### Code Style
+- Follow Google Java Style Guide
+- Use meaningful variable names
+- Comment complex algorithms
+- Document public APIs
+
+## Before merging, check:
+- Tests passed
+- Style guide followed
+- Documentation updated
+- No conflicts
+
+## Phase-Specific Guidelines
+
+### Phase 1: CLI Development
+- Input validation for all parameters
+- Clear error messages
+- Consistent output format
+- Required metrics:
+  - Vehicles per hour per direction
+  - Average wait time
+  - Junction capacity utilization
+
+### Phase 2: GUI Development
+- Processing sketch guidelines
+- Viewport specifications
+- Animation standards
+- UI component layout
+
+## Release Process
+1. Update version in build.gradle:
+```
+// build.gradle
+version = '1.1.0'  // 1.0.0 -> 1.1.0 for new features
+                   // 1.0.0 -> 1.0.1 for bug fixes
+```
+
+2. Document changes in CHANGELOG.md:
+```
+# Changelog
+## [1.1.0] - 2025-01-21
+- Added: CLI traffic density parameter
+- Fixed: Vehicle count bug in lane merges
+```
+
+3. Create and merge release:
+```
+git checkout -b release/v1.1.0
+git add build.gradle CHANGELOG.md
+git commit -m "release: version 1.1.0"
+git push origin release/v1.1.0
+# Create PR on GitHub titled "Release v1.1.0"
+# After merge:
+git tag -a v1.1.0 -m "Release 1.1.0"
+git push origin v1.1.0
+```
+4. Tag release after merge
+
+Remember: When in doubt, ask! Better to clarify than to rework.
