docs: Update .CONTRIBUTING.md

--- a/.CONTRIBUTING.md
+++ b/.CONTRIBUTING.md
@@ -79,6 +79,7 @@ gradle test
 - Style guide followed
 - Documentation updated
 - No conflicts
+- Ryan is in charge of the git, he will review commits/merges within 24h, send a message on Discord
 
 ## Phase-Specific Guidelines
 
