chore: Adjusting Java/Processing/Gradle references for Python/PyGame/PyTest

--- a/.CONTRIBUTING.md
+++ b/.CONTRIBUTING.md
@@ -2,23 +2,23 @@
 
 ## Development Environment Setup
 1. Required tools:
-   - JDK 17+
-   - Gradle 8.0+
-   - Processing 4.0+
+   - Python 3.8+
+   - PyGame
+   - PyTest
    - Git
 
 2. Initial setup:
 ```bash
 git clone https://github.com/YourOrg/Junction-Sim.git
 cd Junction-Sim
-gradle build
+pip install -r requirements.txt # Including PyTest
 ```
 
 ## Project Structure
 ```
 junction-sim/
 ├── src/
-│   ├── main/java/
+│   ├── junction-sim/
 │   │   ├── core/           # Core simulation logic
 │   │   ├── cli/            # Command line interface
 │   │   ├── metrics/        # Traffic analysis
@@ -65,14 +65,17 @@ Examples:
 2. Integration tests for component interactions
 3. Run tests before PR:
 ```
-gradle test
+pytest
+# For coverage:
+pytest --cov=junction_sim
 ```
 
 ### Code Style
-- Follow Google Java Style Guide
+- Follow PEP 8 Style Guide
 - Use meaningful variable names
 - Comment complex algorithms
-- Document public APIs
+- Document public functions with docstrings
+- Label the purpose of added libraries
 
 ## Before merging, check:
 - Tests passed
@@ -93,17 +96,19 @@ gradle test
   - Junction capacity utilization
 
 ### Phase 2: GUI Development
-- Processing sketch guidelines
-- Viewport specifications
+- PyGame window specifications
 - Animation standards
 - UI component layout
+- FPS and performance requirements
 
 ## Release Process
 1. Update version in build.gradle:
 ```
-// build.gradle
-version = '1.1.0'  // 1.0.0 -> 1.1.0 for new features
-                   // 1.0.0 -> 1.0.1 for bug fixes
+# setup.py
+setup(
+    name="junction_sim",
+    version="1.1.0",  # Update version number
+)
 ```
 
 2. Document changes in CHANGELOG.md:
@@ -126,5 +131,17 @@ git tag -a v1.1.0 -m "Release 1.1.0"
 git push origin v1.1.0
 ```
 4. Tag release after merge
+
+## Using PyTest
+```
+# Writing Tests
+# Saved in: tests/test_core/test_simulation.py
+def test_vehicle_routing():
+    sim = Simulation()
+    assert sim.calculate_route(start, end) is not None
+
+# Running specific tests
+pytest tests/test_core/test_simulation.py -v
+```
 
 Remember: When in doubt, ask! Better to clarify than to rework.
