chore: correct project structure

--- a/.CONTRIBUTING.md
+++ b/.CONTRIBUTING.md
@@ -16,17 +16,25 @@ pip install -r requirements.txt # Including PyTest
 
 ## Project Structure
 ```
-junction-sim/
-├── src/
-│   ├── junction-sim/
-│   │   ├── core/           # Core simulation logic
-│   │   ├── cli/            # Command line interface
-│   │   ├── metrics/        # Traffic analysis
-│   │   └── gui/            # Processing visualization
-│   └── test/java/          # Test files
-├── processing/             # Processing-specific code
-├── docs/                   # Documentation
-└── gradle/                 # Gradle configuration
+│   .CONTRIBUTING.md
+│   .gitignore
+│   requirements.txt
+│
+├───docs
+│       requirements.md
+│
+└───src
+    ├───junction_sim
+    │   │   __init__.py
+    │   │
+    │   ├───cli
+    │   ├───core
+    │   ├───gui
+    │   └───metrics
+    └───tests
+        │   __init__.py
+        │
+        └───test_core
 ```
 
 ## Development Workflow
