Cleaned up ReadME and Contributing

--- a/.CONTRIBUTING.md
+++ b/.CONTRIBUTING.md
@@ -3,16 +3,13 @@
 ## Development Environment Setup
 1. Required tools:
    - Python 3.8+
-   - PyGame
    - PyTest
    - Git
+   
+2. Recommended tools
+    - Github Desktop
+    - Visual Studio Code (or other code editor)
 
-2. Initial setup:
-```bash
-git clone https://github.com/YourOrg/Junction-Sim.git
-cd Junction-Sim
-pip install -r requirements.txt # Including PyTest
-```
 
 ## Project Structure
 ```
@@ -36,8 +33,6 @@ pip install -r requirements.txt # Including PyTest
         │
         └───test_core
 ```
-
-## Development Workflow
 
 ### Git Workflow (using git cmd)
 1. Create feature branch:
@@ -64,25 +59,21 @@ git push origin feature/your-feature-name
 - refactor(scope): Code improvement
 
 Examples:
-- `feat(cli): add traffic density parameter`
-- `fix(metrics): correct throughput calculation`
-- `test(core): add junction capacity tests`
+- `feat(density parameter): add traffic density parameter`
+- `fix(efficiency metric): correct throughput calculation`
+- `test(capacity): add junction capacity tests`
 
 ### Testing Requirements
 1. Unit tests for all new features
 2. Integration tests for component interactions
-3. Run tests before PR:
-```
-pytest
-# For coverage:
-pytest --cov=junction_sim
-```
+3. Run tests before merging onto any other branch
+
 
 ### Code Style
 - Follow PEP 8 Style Guide
-- Use meaningful variable names
-- Comment complex algorithms
-- Document public functions with docstrings
+- Use meaningful variable names in snake_case
+- Comment all functions with a short description before definition
+- Comment complex algorithms within themselves
 - Label the purpose of added libraries
 
 ## Before merging, check:
@@ -94,20 +85,34 @@ pytest --cov=junction_sim
 
 ## Phase-Specific Guidelines
 
-### Phase 1: CLI Development
+
+### Phase 1: Prototype Development -- completed
 - Input validation for all parameters
 - Clear error messages
 - Consistent output format
-- Required metrics:
+- Required inputs:
   - Vehicles per hour per direction
+- Required Metrics: 
   - Average wait time
-  - Junction capacity utilization
+  - Max Wait Time
 
-### Phase 2: GUI Development
-- PyGame window specifications
-- Animation standards
+### Phase 2: GUI Development -- completed
 - UI component layout
+- Animation standards
 - FPS and performance requirements
+
+### Phase 3: Additional Parameters -- completed
+- Maintain phase 1 code structure wherever possible.
+- Required Inputs
+  - Bus/bike lanes
+  - Left turn lanes
+  - Pedestrian crossings
+  - Priority
+  - Tests
+- Required Metrics:
+    - Junction Efficiency Score
+    - Environmental Impact Score
+
 
 ## Release Process
 1. Update version in build.gradle:
@@ -116,16 +121,6 @@ pytest --cov=junction_sim
 setup(
     name="junction_sim",
     version="1.1.0",  # Update version number
-)
-```
-
-2. Document changes in CHANGELOG.md:
-```
-# Changelog
-## [1.1.0] - 2025-01-21
-- Added: CLI traffic density parameter
-- Fixed: Vehicle count bug in lane merges
-```
 
 3. Create and merge release:
 ```
@@ -142,14 +137,26 @@ git push origin v1.1.0
 
 ## Using PyTest
 ```
+
+
 # Writing Tests
-# Saved in: tests/test_core/test_simulation.py
+## Saved in:
+tests/test_core/test_simulation.py
+
+## Example Format
+
 def test_vehicle_routing():
     sim = Simulation()
     assert sim.calculate_route(start, end) is not None
 
-# Running specific tests
+## Running specific tests
 pytest tests/test_core/test_simulation.py -v
-```
 
-Remember: When in doubt, ask! Better to clarify than to rework.
+\
+\
+\
+
+
+
+```
+# Remember: When in doubt, ask! Better to clarify than to rework.
